dto 및 request and response 클라 기준 자동 생성 ship module type 관련 리팩토링 함선 관리 기능 테스트 및 수정 필요한 상황